[project]
name = "Packages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
core = { workspace = true }
pkga = { workspace = true }
pkgb = { workspace = true }
pkgc = { workspace = true }
